fix few layout issues

--- a/styles/base/common.sass
+++ b/styles/base/common.sass
@@ -1,15 +1,16 @@
 \:root
 	font-size: 16px
 
-body 
+body
 	background-color: #000
 
-* 
+*
 	box-sizing: border-box
 
 .l-container
 	max-width: em(573)
 	margin: 0 auto
+	padding-top: em(100)
 
 
 .c-heading
