--- a/styles/base/unsubscribe.sass
+++ b/styles/base/unsubscribe.sass
@@ -1,11 +1,12 @@
 .c-unsubscribe
-	background-image: url(../img/bg.png)
+	background-image: url(../img/bg.png), linear-gradient(to top, #f7e644 0%, #dabc2d 100%)
 	background-repeat: no-repeat
 	border-radius: 50%
 	padding: em(111) em(92) em(68)
 	background-size: contain
 	text-align: center
 	+mediaMobileToTablet
+		background-image: url(../img/bg.png)
 		border-radius: 10
 		padding: em(10)
 		background-size: em(200)
